Fix lein test runs, add helper functions for REPL.
- bug in keyword namespace creation
- add comment section with plenty of examples